--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,7 +6,29 @@
     /* border-bottom: 2px solid #EEE; */
     padding-left: 4%;
     padding-right: 4%;
+    margin-bottom: 1.2rem;
+
 }
+
+.Comment__userInfo {
+    font-size: 0.8rem;
+    /* font-weight: bold; */
+    /* color: rgb(0, 154, 189); */
+    color: #797C81;
+}
+
+.Comment__date p {
+    font-size: 13px;
+    margin-bottom: 0;
+    color: #797C81;
+    margin-top: 0.4rem;
+}
+
+.Comment__btn-div {
+    font-size: 1rem;
+}
+
+
 
 .modal {
     position: fixed;
@@ -153,10 +175,15 @@
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-/* .Post__commentContainer {
-    float: right;
-    position: relative;
-} */
+.Post__commentContainer {
+    /* float: right;
+    position: relative; */
+    color: #A6AAB0;
+}
+
+.MemberProfiles__user a:hover {
+    color: rgb(0, 154, 189);
+}
 
 
 
@@ -236,7 +263,8 @@
 
 body {
     margin: 0 auto;
-    font-family: 'Lato', 'Roboto', 'sans-serif';
+    font-family: 'Helvetica Neue', 'Lato', 'Roboto', 'sans-serif';
+    /* font-family: 'Lato', 'Roboto', 'sans-serif'; */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale; 
     line-height: 1.5rem;
@@ -388,13 +416,13 @@ html {
     display: inline-block;
     background-color: rgb(0, 154, 189);
     color: #fff;
-    font-weight: 400;
+    font-weight: 500;
     border-radius: 3px;
     border-width: 2px;
-    /* padding: 0.5rem; */
-    padding: 0.6rem 1.3rem;
+    padding: 0.5rem 0.8rem;
+    /* padding: 0.6rem 1.3rem; */
     border: none;
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
 
 .btn:hover {
@@ -470,8 +498,32 @@ html {
 }
 
 .LandingPage__header h1 {
-    font-size: 24px;
+    font-size: 22px;
     /* letter-spacing: 1px; */
+}
+
+.LandingPage__header p {
+    font-size: 15px;
+}
+
+.CommentTextBox__container {
+    border: 1px solid #EEE;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.CommentTextBox__textArea {
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #EEE;
+    padding: 0.5rem;
+    font-size: 12px;
+}
+
+.CommentTextBox__buttonDiv {
+    text-align: center;
+    padding-top: 0.1rem;
+    padding-bottom: 0.5rem;
 }
 
 
@@ -536,6 +588,7 @@ html {
     justify-content: space-between;
     text-align: left;
 }
+
 
 .MemberProfiles__image {
     display: flex;
