--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -206,9 +206,21 @@
     display: none;
 }
 
-/* .MyProfile {
+.MyProfile {
     text-align: left;
-} */
+}
+
+.MyProfile h1 {
+    font-size: 1.7rem;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+
+.MyProfile__userContainer h2 {
+    padding-left: 4%;
+    padding-right: 4%;
+    margin-bottom: 0;
+}
 
 .rolling {
     animation: move 6s ease-out;
@@ -290,7 +302,7 @@ body {
     visibility: hidden;
 } */
 
-.CreateAccount, .LoginPage, .ProfilePage, .MemberProfiles, .MyProfile, .PostPage{
+.CreateAccount, .LoginPage, .ProfilePage, .MemberProfiles, .MyProfile {
     margin-top: 5rem;
 }
 
@@ -312,15 +324,52 @@ body {
 }
 
 .MyProfile__headers {
-    border-bottom: 2px solid #EEE;
+    border-bottom: 2px solid #c3c3c3;
+   
 }
 
 .MyProfile__headers h3 {
-    margin: 0
+    margin-bottom: 0;
+    margin-top: 1rem;
+    padding-left: 4%;
+    padding-right: 4%;
 }
 
-.MyProfile__form {
+.MyProfile__headers p {
+    margin: 0;
+    padding-left: 4%;
+    padding-right: 4%; 
+}
+
+.MyProfile button {
+    margin-bottom: 0.8rem;
+    margin-top: 0.3rem;
+    margin-right: 4%;
+    margin-left: 4%;
+    /* padding-right: 4%; */
+    display: block;
+}
+
+.MyProfile h3 {
+    font-size: 20px;
+    margin-bottom: 0.5rem;
+}
+
+.list-section {
+    padding-left: 4%;
+    padding-right: 4%;
+    border-top: 8px solid #EEE;
+}
+
+
+.MyProfile__inputContainer {
     margin-top: 2rem;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+
+#showProfiles {
+    margin-right: 0.5rem;
 }
 
 /* .Dashboard {
@@ -344,7 +393,7 @@ label {
 .MyProfile__userContainer {
     width: 100%;
     max-width: 420px;
-    padding: 1.3rem;
+    /* padding: 1.3rem; */
     padding-top: 0rem;
     padding-bottom: 0rem;
     margin: auto;
@@ -596,8 +645,17 @@ html {
 }
 
 .image-upload {
-    text-align: center;
+    /* text-align: center; */
     position: relative;
+    /* padding-left: 4%;
+    padding-right: 4%; */
+}
+
+.MyProfile__image {
+    padding-left: 4%;
+    margin-bottom: 0.3rem;
+    padding-right: 4%;
+    text-align: left;
 }
 
 .image-text {
@@ -898,7 +956,9 @@ article h2 {
 }
 
 .user__image {
-    border-radius: 50%;
+    /* border-radius: 50%; */
+    text-align: left;
+    width: 75%;
 }
 
 
@@ -920,7 +980,7 @@ article h2 {
 
 .PostPage {
     text-align: left;
-    margin-top: 4rem;
+    padding-top: 4rem;
 }
 
 figcaption {
@@ -949,7 +1009,7 @@ ul {
 
 
 .Dashboard__addCity h4 {
-    font-size: 1.1rem;
+    font-size: 0.95rem;
 }
 
 .Dashboard__addCityForm {
