--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -489,10 +489,6 @@ html {
     font-size: 0.9rem;
 }
 
-.btn:hover {
-    cursor: pointer;
-}
-
 .btn_signIn {
     width: 100%;
     margin: 1.2rem auto;
@@ -519,6 +515,7 @@ html {
 
 .register_btn:hover, .btn:hover, .post_btn:hover {
     background-color: #006b84;
+    cursor: pointer;
 }
 
 .login_btn {
@@ -842,9 +839,9 @@ html {
 .AddPost__fileInputLabel {
     position: absolute;
     cursor: pointer;
-    font-size: 100px;
+    /* font-size: 100px; */
     width: 100%;
-    height: 100%;
+    height: 90%;
     top: 0;
     left: 0;
     opacity: 0;
@@ -853,7 +850,7 @@ html {
 
 .AddPost__fileInput {
     width: 100%;
-    height: 100%;
+    height: 90%;
     cursor: pointer;
 }
 
@@ -864,6 +861,7 @@ html {
 
 
 .AddPost__submitContainer {
+    margin-top: 0.5rem;
     display: flex;
     justify-content: space-between;
 }
@@ -1228,6 +1226,76 @@ h3 a {
     color: white;
 }
 
+#AddPost__cover {
+    position:fixed;
+    top:0;
+    left:0;
+    background:rgba(0,0,0,0.5);
+    z-index: 100;
+    width:100%;
+    height:100%;
+    display:none;
+}
+
+
+
+
+#createPostForm {
+  /* height:380px;
+  width:340px; */
+  /* top: 10%;
+  left: 10%; */
+  width: 100%;
+  background-color: white;
+  padding: 3rem 1.5rem 1.5rem;
+  margin:0 auto;
+  position:relative;
+  z-index:999;
+  display:none;
+  border:5px solid #cccccc;
+  border-radius:10px;
+}
+
+#createPostForm:target, #createPostForm:target + #AddPost__cover{
+    display:block;
+    opacity:2;
+    overflow-y: hidden;
+}
+
+.cancelForm {
+  display:block;
+  position:absolute;
+  top:3px;
+  right:2px;
+  /* background:rgb(245,245,245); */
+  color:#373a36;
+  /* height:30px;
+  width:35px; */
+  font-size:1.25rem;
+  text-decoration:none;
+  text-align:center;
+  font-weight:bold;
+  padding: .75rem;
+  line-height: 1rem;
+}
+
+.cancelForm:hover, .cancelForm:focus {
+    background: rgba(0, 0, 0, 0.10);
+}
+
+
+.AddPost {
+    margin: 4rem 0.5rem 1rem;
+}
+
+.Dashboard__submit {
+    padding: 0.2rem 0.4rem;
+}
+
+.AddPost__imageContainer {
+    text-align: left;
+}
+
 
 
 @media only screen and (min-width: 640px) {
@@ -1297,73 +1365,6 @@ h3 a {
     }
     
 }
-
-#AddPost__cover {
-    position:fixed;
-    top:0;
-    left:0;
-    background:rgba(0,0,0,0.5);
-    z-index: 100;
-    width:100%;
-    height:100%;
-    display:none;
-}
-
-
-
-
-#createPostForm {
-  /* height:380px;
-  width:340px; */
-  /* top: 10%;
-  left: 10%; */
-  width: 100%;
-  background-color: white;
-  padding: 3rem 1.5rem 1.5rem;
-  margin:0 auto;
-  position:relative;
-  z-index:999;
-  display:none;
-  border:5px solid #cccccc;
-  border-radius:10px;
-}
-
-#createPostForm:target, #createPostForm:target + #AddPost__cover{
-    display:block;
-    opacity:2;
-    overflow-y: hidden;
-}
-
-.cancelForm {
-  display:block;
-  position:absolute;
-  top:3px;
-  right:2px;
-  /* background:rgb(245,245,245); */
-  color:#373a36;
-  /* height:30px;
-  width:35px; */
-  font-size:1.25rem;
-  text-decoration:none;
-  text-align:center;
-  font-weight:bold;
-  padding: .75rem;
-  line-height: 1rem;
-}
-
-.cancelForm:hover, .cancelForm:focus {
-    background: rgba(0, 0, 0, 0.10);
-}
-
-
-.AddPost {
-    margin: 4rem 0.5rem 1rem;
-}
-
-.Dashboard__submit {
-    padding: 0.2rem 0.4rem;
-}
-
 
 
 @media only screen and (min-width: 768px) {
