--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,20 +6,20 @@ a {
     color: rgb(0, 0, 238);
 }
 
-.contactItem {
+.contactItem, .sideContactItem {
     display: inline-block;
     /* padding-right: 0.8rem; */
     padding: 0.8rem;
     margin: 0 auto;
 }
 
-/* .contact-item a {
-    /* color: white;
-}  */
+.contactItem a {
+    color: white;
+}  
 
-.mail {
+/* .mail {
     padding-left: 0.9rem;
-}
+} */
 
 .copyRight {
     text-align: center;
@@ -29,13 +29,38 @@ a {
     font-size: 0.7rem;
 }
 
-footer {
+.MainNav {
+    position: absolute;
+    bottom: 0;
+    text-align :center;
+    width: 100%;
+    color: white;
+    font-weight: 500;
+    margin-top: 2rem;
+    padding: 0.5rem 1rem;
+    line-height: 0.6rem;
+    background-color: rgb(0, 154, 189);
+}
+
+.MainNavLong {
+    position: relative;
+    bottom: 0;
+    text-align :center;
+    width: 100%;
+    color: white;
+    font-weight: 500;
+    margin-top: 2rem;
+    padding: 0.5rem 1rem;
+    line-height: 0.6rem;
+    background-color: rgb(0, 154, 189);
+}
+
+.SideNav {
     text-align :center;
     width: 100%;
     /* color: white; */
     font-weight: 500;
     margin-top: 1.5rem;
-    /* padding: 0.5rem 1rem; */
     line-height: 0.6rem;
 }
 
